--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
-      <form action="https://formsubmit.co/pankajchaturvedi993@gmail.com@gmail.com" method="POST">
+      <form action="https://formsubmit.co/pankajchaturvedi993@gmail.com" method="POST">
         <input type="hidden" name="access_key" value="9ac6beb8-b919-4ff4-8bb4-a343782d5ad9">
         
         <div class="input-box">
